add: qinjin部分代码提交